--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Towers Of Hanoi</h1>
     <hr/>
+    <h2 id="moveContainer"> Total moves: 0</h2>
+    <div class="container">
       <div id="top-row" data-row="top" class="red row" onclick="selectRow(this)"></div>
       <div id="middle-row" data-row="middle" class="yellow row" onclick="selectRow(this)"></div>
       <div id="bottom-row" class="green row" data-row="bottom" onclick="selectRow(this)">
@@ -17,7 +19,7 @@
         <div id="2" data-size="2" data-color="green" class="stone" ></div>
         <div id="1" data-size="1" data-color="blue" class="stone" ></div>
       </div>
-    <hr/>
+    </div>
   </body>
 </html>
 
